--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "description": "Website of Flora Fischbacher",
   "version": "0.0.1",
   "scripts": {
-    "dev": "sapper dev",
+    "dev": "run-p sapper:dev watch:css",
+    "sapper:dev": "sapper dev",
+    "watch:css": "NODE_ENV=development postcss static/global.pcss -o static/global.css -w",
     "build": "sapper build",
+    "build:css": "NODE_ENV=production postcss static/global.pcss -o static/global.css",
     "export": "sapper export",
     "start": "node __sapper__/build"
   },
@@ -21,13 +24,28 @@
     "@babel/runtime": "^7.0.0",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.0",
     "@rollup/plugin-url": "^6.0.0",
+    "autoprefixer": "^10.2.5",
+    "babel-eslint": "^10.1.0",
+    "cssnano": "^4.1.10",
+    "eslint": "^7.22.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.8",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0",
+    "postcss-load-config": "^3.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.2.0",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.29.1",
-    "svelte": "^3.17.3"
+    "svelte": "^3.17.3",
+    "svelte-preprocess": "^4.6.9",
+    "tailwindcss": "^2.0.3"
   }
 }
