--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "description": "Website of Flora Fischbacher",
   "version": "0.0.1",
   "scripts": {
-    "dev": "sapper dev",
+    "dev": "run-p dev:css dev:sapper",
+    "dev:css": "NODE_ENV=development postcss src/global.pcss -o static/global.css -w",
+    "dev:sapper": "sapper dev",
     "build": "sapper build",
     "export": "sapper export",
     "start": "node __sapper__/build"
@@ -24,10 +26,17 @@
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.0",
     "@rollup/plugin-url": "^6.0.0",
+    "autoprefixer": "^10.3.1",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.3.6",
+    "postcss-cli": "^8.3.1",
+    "prettier": "^2.3.2",
+    "prettier-plugin-svelte": "^2.3.1",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.29.1",
-    "svelte": "^3.17.3"
+    "svelte": "^3.17.3",
+    "tailwindcss": "^2.2.7"
   }
 }
