--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flora-fischbacher",
   "description": "Website of Flora Fischbacher",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "dev": "run-p dev:css dev:sapper",
     "dev:css": "NODE_ENV=development postcss src/global.pcss -o static/global.css -w",
@@ -21,12 +22,14 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.0",
     "@rollup/plugin-url": "^6.0.0",
     "autoprefixer": "^10.3.1",
+    "cssnano": "^5.0.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
@@ -37,6 +40,11 @@
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.29.1",
     "svelte": "^3.17.3",
-    "tailwindcss": "^2.2.7"
+    "svelte-awesome": "^2.3.2",
+    "svelte-click-outside": "^1.0.0",
+    "svelte-compare-image-slider": "^0.1.15",
+    "svelte-preprocess": "^4.7.4",
+    "tailwindcss": "^2.2.7",
+    "typescript": "^4.3.5"
   }
 }
