build: migrate from sapper to sveltekit
- add .editorconfig
- fix broken prettier setup
- use $page.path instead of segment
- add sveltekit:prefetch to all links
- convert greater than arrows to html unicode
- convert various files from .js to .ts
- add stores.ts with isDev to get current environment
- update tsconfig.json with paths config
- rename couple files from .js to .cjs due to type module
- update package.json with sveltekit deps and update scripts
- update eslint ruleset to be up to date

--- a/package.json
+++ b/package.json
@@ -4,46 +4,44 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "run-p dev:css dev:sapper",
+    "clean": "rm -rf .svelte-kit && rm -rf build",
+    "dev": "run-p dev:css dev:svelte-kit",
     "dev:css": "NODE_ENV=development postcss src/global.pcss -o static/global.css -w",
-    "dev:sapper": "sapper dev",
-    "build": "sapper build",
-    "export": "sapper export",
-    "start": "node __sapper__/build"
+    "dev:svelte-kit": "svelte-kit dev",
+    "dev:validate": "svelte-check",
+    "dev:all": "run-p dev:css dev:svelte-kit dev:validate lint:fix",
+    "lint": "eslint --ignore-path .gitignore .",
+    "lint:fix": "yarn lint --fix",
+    "build": "run-s build:css build:prod",
+    "build:css": "NODE_ENV=production postcss src/global.pcss -o static/global.css",
+    "build:prod": "svelte-kit build",
+    "build:preview": "svelte-kit preview"
   },
-  "dependencies": {
-    "compression": "^1.7.1",
-    "polka": "next",
-    "sirv": "^1.0.0"
-  },
+  "type": "module",
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@rollup/plugin-babel": "^5.0.0",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@rollup/plugin-replace": "^2.4.0",
-    "@rollup/plugin-url": "^6.0.0",
+    "@sveltejs/adapter-static": "1.0.0-next.16",
+    "@sveltejs/kit": "1.0.0-next.142",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
     "autoprefixer": "^10.3.1",
     "cssnano": "^5.0.7",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-svelte3": "^3.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "prettier": "^2.3.2",
     "prettier-plugin-svelte": "^2.3.1",
-    "rollup": "^2.3.4",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "sapper": "^0.29.1",
     "svelte": "^3.17.3",
     "svelte-awesome": "^2.3.2",
+    "svelte-check": "^2.2.4",
     "svelte-click-outside": "^1.0.0",
     "svelte-preprocess": "^4.7.4",
     "tailwindcss": "^2.2.7",
+    "tslib": "^2.3.1",
     "typescript": "^4.3.5"
   }
 }
