--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
 .DS_Store
 /node_modules/
-/src/node_modules/@sapper/
-/__sapper__/
-/static/global.css
+.pnpm-debug.log
+static/g
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+.history/
+stats.html
+static/global.css
+static/global.css.map
+.svelte-kit
+build
+
+# Local Netlify folder
+.netlify
