--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,12 @@
     "checkJs": true,
     "importHelpers": true,
     "removeComments": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "paths": {
+      "$app/*": [".svelte/dev/runtime/app/*", ".svelte/build/runtime/app/*"],
+      "$lib/*": ["src/lib/*"],
+      "$static/*": ["src/static/*"]
+    }
   },
   "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
 }
